# setuptools_scm_issue_987_demo

./: MANIFEST.in  README.md  pyproject.toml
