[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/testpyproj/_version.py"

# Or using Hatchling instead:
# [build-system]
# requires = ["hatchling==1.12.0", "hatch-vcs==0.4.0", "setuptools-scm>=8"]
# build-backend = "hatchling.build"

# [tool.hatch]
# version.source = "vcs"
# build.hooks.vcs.version-file = "src/testpyproj/_version.py"

[project]
name = "testpyproj"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["src"]
